// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/ErrorMessage Defaults play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       aria-atomic="true"
  >
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       lang="nb"
       data-testid="123ID"
       aria-live="assertive"
       aria-atomic="true"
  >
    <div class="_errorMessage_1ycvu_15 dummyClassname">
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
        </path>
      </svg>
      <p class="_errorMessageText_1ycvu_32">
        Feilmelding
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <div class="errorMessageContainer">
    <div aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1ycvu_15">
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1ycvu_32">
          Dette blir en veldig lang feilmelding for å teste om du oppfører seg om den skal.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <div class="errorMessageContainer">
    <div aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1ycvu_15">
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1ycvu_32">
          Detteblirenveldiglangfeilmeldingforåtesteomduoppførersegomdenskal.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithPElement play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       aria-atomic="true"
  >
    <div class="_errorMessage_1ycvu_15">
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
        </path>
      </svg>
      <p class="_errorMessageText_1ycvu_32">
        Feilmelding
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorMessage WithRef play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       aria-atomic="true"
       id="dummyIdForwardedFromRef"
  >
  </div>
</div>
`;
